# tmdbpp

./: CMakeLists.txt  Doxyfile  README.md  main.cpp  winget.cpp
nifty/: IndexedMap.h
tmdbpp/: api.cpp  api.h  apiagent.cpp  apiagent.h  authentication.cpp  authentication.h  collection.h  collections.h  companies.h  company.h  credits.h  get.cpp  get.h  keyword.h  keywords.h  movie.h  moviefilter.cpp  moviefilter.h  movielister.cpp  movielister.h  movies.h  pagedcollection.h  person.h  personfilter.cpp  personfilter.h  persons.h  search.cpp  search.h  tvfilter.cpp  tvfilter.h  tvlister.cpp  tvlister.h  tvseries.h  tvseriescollection.h  url.h  util.h  win_wget.cpp  win_wget.h
